# unisinos-programacao-paradispositivos-moveis

./: README.md  dev-buildapp.sh  dev-buildbackend.sh  dev-runandroidemulator.sh  dev-runappandroid.sh  dev-syncclientapi.sh
app/: package-lock.json  package.json
app/src/: index.html
app/src/apiclient/: DefaultApi.md
app/src/apiclient/.openapi-generator/: FILES
app/src/apiclient/apis/: DefaultApi.ts
app/src/apiclient/http/: http.ts
app/src/apiclient/models/: HTTPValidationError.ts  ObjectSerializer.ts  PotentialCustomer.ts  ServiceCatalogInput.ts  ServiceCatalogOutput.ts  ValidationError.ts  ValidationErrorLocInner.ts  Value.ts  When.ts  all.ts
app/src/apiclient/types/: ObjectParamAPI.ts  ObservableAPI.ts  PromiseAPI.ts
app/src/app/: app-routing.module.ts  app.component.ts  service.spec.ts  service.ts
app/src/app/explore-container/: explore-container.component.html
app/src/app/tab1/: tab1.page.html  tab1.page.scss  tab1.page.ts
app/src/app/tab2/: tab2.page.html  tab2.page.scss  tab2.page.ts
app/src/app/tab3/: tab3.page.html
app/src/app/tabCadastro/: tabCadastro-routing.module.ts  tabCadastro.module.ts  tabCadastro.page.html  tabCadastro.page.scss  tabCadastro.page.spec.ts  tabCadastro.page.ts
app/src/app/tabContatosRecebidos/: tabContatosRecebidos-routing.module.ts  tabContatosRecebidos.module.ts  tabContatosRecebidos.page.html  (+3 more)
app/src/environments/: environment.prod.ts  environment.ts
backend/: =0.109.2  =2.0.26  Dockerfile  pyproject.toml
backend/src/: app.py
backend/src/backend/: database.py  models.py  schemas.py
(+13 files in other folders)
